--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Tyler Will"
 title_separator          : "-"
 name                     : &name "Tyler Will"
-description              : &description "Senior undergraduate at Michigan State University"
+description              : &description "Graduate student at Columbia"
 url                      : https://tylerwill.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "tylerwill.github.io"
