--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Tyler Will"
   avatar           : "profile.png"
-  bio              : "Senior undergraduate at Michigan State University"
-  location         : "East Lansing, MI"
+  bio              : "Graduate student at Columbia"
+  location         : "New York, NY"
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            : "willtyle@msu.edu"
+  email            : "tyler.wilL@columbia.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
